--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
 VUE_APP_API_VENTAS=http://localhost/api_ventas_cocha/public/api/
+#VUE_APP_API_VENTAS=https://stark-mountain-29753.herokuapp.com/api/
